<resources>
    <string name="app_name" translatable="false">Tempestatibus</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="exception_caught_text" translatable="false">"Exception caught: "</string>
    <string name="clear_day" translatable="false">clear-day</string>
    <string name="clear_night" translatable="false">clear-night</string>
    <string name="rain" translatable="false">rain</string>
    <string name="snow" translatable="false">snow</string>
    <string name="sleet" translatable="false">sleet</string>
    <string name="wind" translatable="false">wind</string>
    <string name="fog" translatable="false">fog</string>
    <string name="cloudy" translatable="false">cloudy</string>
    <string name="partly_cloudy_day" translatable="false">partly-cloudy-day</string>
    <string name="partly_cloudy_night" translatable="false">partly-cloudy-night</string>
    <string name="JSON" translatable="false">JSON</string>
    <string name="IO" translatable="false">IO</string>
    <string name="api_key_string" translatable="false">@string/api_key</string>
    <string name="api_url" translatable="false">https://api.forecast.io/forecast/</string>
    <string name="forecast_io_url" translatable="false">http://forecast.io</string>
    <string name="JSON_Object_name_currently" translatable="false">currently</string>
    <string name="JSON_string_property_timezone" translatable="false">timezone</string>
    <string name="JSON_double_property_humidity" translatable="false">humidity</string>
    <string name="JSON_long_property_time" translatable="false">time</string>
    <string name="JSON_string_property_icon" translatable="false">icon</string>
    <string name="JSON_double_property_precip_probability" translatable="false">precipProbability</string>
    <string name="JSON_string_property_summary" translatable="false">summary</string>
    <string name="JSON_double_property_temperature" translatable="false">temperature</string>
    <string name="JSON_double_property_latitude" translatable="false">latitude</string>
    <string name="JSON_double_property_longitude" translatable="false">longitude</string>
    <string name="error_dialog" translatable="false">error_dialog</string>
    <string name="main_ui_debug_message" translatable="false">Main UI is running.</string>
    <string name="unsuccessful_response" translatable="false">Unsuccessful response</string>
    <string name="security_exception" translatable="false">Security</string>
    <string name="forecast_url_string_extra" translatable="false">forecast_url</string>
    <string name="current_weather_string" translatable="false">current_weather_string</string>
    <string name="has_errors_boolean_extra" translatable="false">has_errors</string>
    <string name="current_weather_json_data_extra" translatable="false">current_weather_json_data_extra</string>
    <string name="JSON_object_property_hourly" translatable="false">hourly</string>
    <string name="JSON_data_array" translatable="false">data</string>
    <string name="JSON_object_daily" translatable="false">daily</string>
    <string name="JSON_object_double_property_max_temp" translatable="false">temperatureMax</string>
    <string name="empty_two_digit_number" translatable="false">--</string>
    <string name="meatball_summary" translatable="false">Stormy with a chance of meatballs</string>
    <string name="time_place_holder" translatable="false">At 5:00pm it wil be</string>
    <string name="location_placeholder" translatable="false">Logos, Africa</string>
    <string name="title_activity_daily_forecast" translatable="false">DailyForecastActivity</string>
    <string name="title_activity_searched_location" translatable="false">SearchedLocationActivity</string>
    <string name="daily_forecast_parcel_string" translatable="false">DAILY_FORECAST</string>
    <string name="title_activity_hourly_forecast" translatable="false">HourlyForecastActivity</string>
    <string name="date_label_text" translatable="false">Tue, Aug. 29</string>
    <string name="invalid_lat_and_or_long" translatable="false">Invalid lat./long. for Geolocator</string>
    <string name="no_address_found" translatable="false">Geolocator couldn\'t find an address</string>
    <string name="address_found" translatable="false">Geolocator found the address</string>
    <string name="no_geocoder_available" translatable="false">No Geocoder available</string>
    <string name="theme_preference_key" translatable="false">APP_THEME</string>
    <string name="hourly_extend_preference_key" translatable="false">APP_HOURLY_EXTEND</string>
    <string name="autumn_value" translatable="false">AUTUMN</string>
    <string name="summer_value" translatable="false">SUMMER</string>
    <string name="spring_value" translatable="false">SPRING</string>
    <string name="winter_value" translatable="false">WINTER</string>
    <string name="theme" translatable="false">Theme</string>
    <string name="units_preference_key" translatable="false">APP_UNITS</string>
    <string name="us_units_preference" translatable="false">US</string>
    <string name="si_units_preference" translatable="false">SI</string>
    <string name="JSON_double_property_nearestStormBearing" translatable="false">nearestStormBearing</string>
    <string name="JSON_double_property_nearestStormDistance" translatable="false">nearestStormDistance</string>
    <string name="JSON_double_property_precipitationIntensity" translatable="false">precipIntensity</string>
    <string name="JSON_double_property_apparentTemperature" translatable="false">apparentTemperature</string>
    <string name="JSON_double_property_dewPoint" translatable="false">dewPoint</string>
    <string name="JSON_double_property_windSpead" translatable="false">windSpeed</string>
    <string name="JSON_double_property_windBearing" translatable="false">windBearing</string>
    <string name="JSON_double_property_visibility" translatable="false">visibility</string>
    <string name="JSON_double_property_cloudCover" translatable="false">cloudCover</string>
    <string name="JSON_double_property_pressure" translatable="false">pressure</string>
    <string name="JSON_double_property_ozone" translatable="false">ozone</string>
    <string name="JSON_double_property_precipitationType" translatable="false">precipType</string>
    <string name="JSON_object_property_flags" translatable="false">flags</string>
    <string name="JSON_string_property_units" translatable="false">units</string>
    <string name="JSON_double_property_apparentTemperatureMax" translatable="false">apparentTemperatureMax</string>
    <string name="JSON_long_property_temperatureMaxTime" translatable="false">temperatureMaxTime</string>
    <string name="JSON_double_property_temperatureMin" translatable="false">temperatureMin</string>
    <string name="JSON_long_property_temperatureMinTime" translatable="false">temperatureMinTime</string>
    <string name="JSON_long_property_apparentTemperatureMaxTime" translatable="false">apparentTemperatureMaxTime</string>
    <string name="JSON_double_property_apparentTemperatureMin" translatable="false">apparentTemperatureMin</string>
    <string name="JSON_long_property_apparentTemperatureMinTime" translatable="false">apparentTemperatureMinTime</string>
    <string name="JSON_double_propert_precipIntensityMax" translatable="false">precipIntensityMax</string>
    <string name="JSON_long_property_precipIntensityMaxTime" translatable="false">precipIntensityMaxTime</string>
    <string name="JSON_long_property_sunriseTime" translatable="false">sunriseTime</string>
    <string name="JSON_long_property_sunsetTime" translatable="false">sunsetTime</string>
    <string name="JSON_double_propperty_moonPhase" translatable="false">moonPhase</string>
    <string name="JSON_double_property_precipitatioonAccumulation" translatable="false">precipAccumulation</string>
    <string name="widget_2x1_label" translatable="false">Tempestatibus Small Widget</string>
    <string name="widget_3x2_label" translatable="false">Tempestatibus Medium Widget</string>
    <string name="widget_4x3_label" translatable="false">Tempestatibus Large Widget</string>
    <string name="us_units_fahrenheit" translatable="false">F</string>
    <string name="error_message_empty_JSON_data" translatable="false">JSON Data is null or empty, not starting JSONExtractionIntentService</string>
    <string name="placeholder_address_text" translatable="false">Mountain View, CA 94043 USA</string>
    <string name="si_units_celsius" translatable="false">C</string>
    <string name="si_units_kilometers_per_hour" translatable="false">kph</string>
    <string name="si_units_kilometers" translatable="false">km</string>
    <string name="si_units_hectoPascals" translatable="false">hPa</string>
    <string name="utf_8_content_type" translatable="false">utf-8</string>
    <string name="forecast_api_call_header_accept_encoding" translatable="false">Accept-Encoding</string>
    <string name="forcast_api_call_header_value_gzip_encoding" translatable="false">gzip</string>
    <string name="forecast_api_call_header_value_key_charset" translatable="false">charset</string>
    <string name="forecast_api_call_header_content_type" translatable="false">Content-Type</string>
    <string name="percent_symbol" translatable="false">%</string>
    <string name="us_unit_miles" translatable="false">mi.</string>
    <string name="us_units_millibars" translatable="false">mb</string>
    <string name="us_units_miles_per_hour" translatable="false">mph</string>
    <string name="units_dobson" translatable="false">DU</string>
    <string name="title_activity_search_for_location" translatable="false">SearchForLocationActivity</string>
    <string name="powered_by_forecast" translatable="false"><u>Powered by Forecast</u></string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="error_ok_button_text">OK</string>
    <string name="network_unavailable_text">Network is unavailable</string>
    <string name="location_permission_request_rationale">Location information is needed to retrieve weather data.</string>
    <string name="hourly_all_caps">HOURLY</string>
    <string name="app_theme_title">Choose an App Theme</string>
    <string name="app_theme_selection">Select the app theme</string>
    <string name="units_preference_title">Units of Measure</string>
    <string name="si_units_preference_summary">SI units</string>
    <string name="us_units_preference_summary">US units</string>
    <string name="on_switch_text">ON</string>
    <string name="off_switch_text">OFF</string>
    <string name="hourly_extend_preference_summary_off">Standard Hourly</string>
    <string name="hourly_extend_preference_summary_on">Hourly Extended</string>
    <string name="icon_image_description">Icon to represent the weather, cloudy with rain, sunny, etc.</string>
    <string name="degrees_image_description">Degrees Symbol, a small circle in superscript</string>
    <string name="hourly_extend_preference_title">Extend hourly forecast?</string>
    <string name="configure_widget_layout">Configure Widget</string>
    <string name="match_app_theme_hint">Match the widget theme with the apps</string>
    <string name="transparent_background_text">Transparent Background</string>
    <string name="text_color_label">Text Color</string>
    <string name="white_label">White</string>
    <string name="black_label">Black</string>
    <string name="proceed_button_label">Proceed</string>
    <string name="black_text_hint">Layout app widget with transparent background</string>
    <string name="white_text_hint">Layout app widget with transparent background</string>
    <string name="transparent_background_hint">Layout app widget with transparent background</string>
    <string name="match_app_theme_text">Match App Theme</string>
</resources>