<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@drawable/bg_widget_gradient_spring">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tempestatibus"
        android:clickable="true">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:id="@+id/tempestatibusIcon"
            android:src="@mipmap/ic_launcher"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/icon_image_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:layout_toEndOf="@id/tempestatibusIcon"
            android:layout_toRightOf="@id/tempestatibusIcon"
            android:textSize="10sp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by_forecast"
        android:id="@+id/poweredByForecast"
        android:textSize="10sp"
        android:clickable="true"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:id="@+id/first_widget_outer_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/first_widget_layout_data_table_bottom_margin"
                android:layout_marginStart="@dimen/first_widget_layout_data_table_bottom_margin"
                android:layout_marginTop="@dimen/first_widget_layout_data_table_bottom_margin"
                android:id="@+id/progressBarLayout">

                <ProgressBar
                    android:layout_width="36dip"
                    android:layout_height="36dip"
                    android:id="@+id/progressBar"
                    style="@style/SPRING.INDETERMINATE_PROGRESS_STYLE"
                    android:background="@android:color/transparent"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iconImageView"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icon_image_description"
                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_two_digit_number"
                android:textColor="@color/spring_text_color"
                android:id="@+id/firstWidgetTemperatureValue"
                android:textSize="24sp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp"
                android:background="@android:color/transparent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/spring_degree_small"
                android:id="@+id/firstWidgetTemperatureDegreeSymbol"
                android:background="@android:color/transparent"
                android:contentDescription="@string/degrees_image_description"
                android:layout_marginTop="1dp"
                android:layout_toRightOf="@id/firstWidgetTemperatureValue"
                android:layout_toEndOf="@id/firstWidgetTemperatureValue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/us_units_fahrenheit"
                android:id="@+id/firstWidgetTemperatureUnits"
                android:textSize="24sp"
                android:textColor="@color/spring_text_color"
                android:background="@android:color/transparent"
                android:layout_alignBottom="@+id/firstWidgetTemperatureValue"
                android:layout_toRightOf="@id/firstWidgetTemperatureDegreeSymbol"
                android:layout_toEndOf="@id/firstWidgetTemperatureDegreeSymbol"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/empty_two_digit_number"
                android:id="@+id/firstWidgetSummaryValue"
                android:background="@android:color/transparent"
                android:textSize="12sp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textColor="@color/spring_text_color"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>